--- a/integration/inspector/tsconfig.json
+++ b/integration/inspector/tsconfig.json
@@ -27,7 +27,9 @@
       "@nestjs/platform-socket.io": ["../../packages/platform-socket.io"],
       "@nestjs/platform-socket.io/*": ["../../packages/platform-socket.io/*"],
       "@nestjs/platform-ws": ["../../packages/platform-ws"],
-      "@nestjs/platform-ws/*": ["../../packages/platform-ws/*"]
+      "@nestjs/platform-ws/*": ["../../packages/platform-ws/*"],
+      "@nestjs/platform-bun-ws": ["./packages/platform-bun-ws"],
+      "@nestjs/platform-bun-ws/*": ["./packages/platform-bun-ws/*"]
     }
   },
   "include": [
