chore: downgrade nyc version

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "mocha packages/**/*.spec.ts",
     "test:dev": "mocha -w --watch-files \"packages\" packages/**/*.spec.ts",
     "pretest:cov": "npm run clean",
-    "test:cov": "NODE_OPTIONS=--max-old-space-size=8192 nyc mocha packages/**/*.spec.ts --reporter spec",
+    "test:cov": "nyc mocha packages/**/*.spec.ts --reporter spec",
     "test:integration": "mocha \"integration/*/{,!(node_modules)/**/}/*.spec.ts\"",
     "test:docker:up": "docker-compose -f integration/docker-compose.yml up -d",
     "test:docker:down": "docker-compose -f integration/docker-compose.yml down",
@@ -159,7 +159,7 @@
     "mysql2": "3.6.2",
     "nats": "2.17.0",
     "nodemon": "3.0.1",
-    "nyc": "15.1.0",
+    "nyc": "14.1.1",
     "prettier": "3.0.3",
     "redis": "4.6.10",
     "rxjs-compat": "6.6.7",
