Fix typo in Bug_report.yml

--- a/.github/ISSUE_TEMPLATE/Bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/Bug_report.yml
@@ -46,7 +46,7 @@ body:
       label: "Steps to reproduce"
       description: |
         How the issue manifests?
-        You could leave this blank if you alread write this in your reproduction code
+        You could leave this blank if you already write this in your reproduction code
       placeholder: |
         1. `npm ci`
         2. `npm start:dev`
