--- a/sample/12-graphql-schema-first/package.json
+++ b/sample/12-graphql-schema-first/package.json
@@ -39,6 +39,7 @@
     "@nestjs/schematics": "10.0.2",
     "@nestjs/testing": "10.2.6",
     "@types/express": "4.17.21",
+    "@types/jest": "^29.5.10",
     "@types/node": "20.8.7",
     "@types/supertest": "2.0.15",
     "@typescript-eslint/eslint-plugin": "5.62.0",
@@ -55,5 +56,22 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
     "typescript": "5.2.2"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
   }
 }
