fix: allow @fastify/static v7

--- a/packages/platform-fastify/package.json
+++ b/packages/platform-fastify/package.json
@@ -27,7 +27,7 @@
     "tslib": "2.6.2"
   },
   "peerDependencies": {
-    "@fastify/static": "^6.0.0",
+    "@fastify/static": "^6.0.0 || ^7.0.0",
     "@fastify/view": "^7.0.0 || ^8.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0"
