--- a/sample/04-grpc/server/package.json
+++ b/sample/04-grpc/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "1.10.0",
+    "@grpc/reflection": "1.0.3",
     "@nestjs/common": "10.3.2",
     "@nestjs/core": "10.3.2",
     "@nestjs/microservices": "10.3.2",
@@ -50,8 +51,8 @@
     "supertest": "6.3.3",
     "ts-jest": "29.1.2",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.3.3"
   }
 }
