feat(ws): add regex path support on platform ws path

--- a/packages/platform-ws/package.json
+++ b/packages/platform-ws/package.json
@@ -18,6 +18,7 @@
     "access": "public"
   },
   "dependencies": {
+    "path-to-regexp": "^6.2.1",
     "tslib": "2.6.2",
     "ws": "8.16.0"
   },
