--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@codechecks/client": "0.1.12",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-angular": "19.3.0",
+    "@confluentinc/kafka-javascript": "0.1.12-devel",
     "@fastify/cors": "9.0.1",
     "@fastify/formbody": "7.4.0",
     "@fastify/middie": "8.3.0",
