--- a/packages/platform-fastify/package.json
+++ b/packages/platform-fastify/package.json
@@ -18,17 +18,17 @@
     "access": "public"
   },
   "dependencies": {
-    "@fastify/cors": "9.0.1",
-    "@fastify/formbody": "7.4.0",
-    "@fastify/middie": "8.3.3",
-    "fastify": "4.28.1",
+    "@fastify/cors": "9.0.1 || 10.0.0",
+    "@fastify/formbody": "7.4.0 || 8.0.0",
+    "@fastify/middie": "8.3.3 || 9.0.1",
+    "fastify": "4.28.1 || 5.0.0",
     "light-my-request": "6.0.0",
     "path-to-regexp": "3.3.0",
     "tslib": "2.7.0"
   },
   "peerDependencies": {
-    "@fastify/static": "^6.0.0 || ^7.0.0",
-    "@fastify/view": "^7.0.0 || ^8.0.0",
+    "@fastify/static": "^6.0.0 || ^7.0.0 || ^8.0.0",
+    "@fastify/view": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0"
   },
