--- a/sample/06-mongoose/package.json
+++ b/sample/06-mongoose/package.json
@@ -23,6 +23,8 @@
     "@nestjs/core": "10.3.2",
     "@nestjs/mongoose": "10.0.2",
     "@nestjs/platform-express": "10.3.8",
+    "@types/eslint-scope": "^3.7.7",
+    "class-validator": "^0.14.1",
     "mongoose": "8.0.1",
     "reflect-metadata": "0.2.1",
     "rimraf": "5.0.5",
@@ -41,7 +43,7 @@
     "eslint": "8.42.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
-    "jest": "29.7.0",
+    "jest": "^29.7.0",
     "prettier": "3.2.5",
     "supertest": "6.3.3",
     "ts-jest": "29.1.2",
