--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,7 +44,7 @@
     "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/websockets": "^10.0.0",
-    "reflect-metadata": "^0.1.12 || ^0.2.0",
+    "reflect-metadata": "^0.1.12 || ^0.2.0"
   },
   "peerDependenciesMeta": {
     "@nestjs/websockets": {
