--- a/packages/platform-fastify/package.json
+++ b/packages/platform-fastify/package.json
@@ -18,11 +18,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@fastify/cors": "9.0.1 || 10.0.0",
-    "@fastify/formbody": "7.4.0 || 8.0.0",
-    "@fastify/middie": "8.3.3 || 9.0.1",
-    "fastify": "4.28.1 || 5.0.0",
-    "light-my-request": "6.0.0",
+    "@fastify/cors": "10.0.1",
+    "@fastify/formbody": "8.0.1",
+    "@fastify/middie": "9.0.2",
+    "fastify": "5.1.0",
+    "light-my-request": "6.3.0",
     "path-to-regexp": "3.3.0",
     "tslib": "2.7.0"
   },
