--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "ts-node": "10.9.2",
     "typeorm": "0.3.20",
     "typescript": "5.6.2",
-    "wrk": "1.2.1",
+    "wrk": "^1.2.1",
     "ws": "8.18.0"
   },
   "engines": {
