--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "ts-node": "10.9.2",
     "typeorm": "0.3.20",
     "typescript": "5.6.2",
+    "ultimate-express": "^1.3.5",
     "wrk": "^1.2.1",
     "ws": "8.18.0"
   },
