build(sample): replace cli-color with smaller and faster ansis

--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
   },
   "dependencies": {
     "@nuxtjs/opencollective": "0.3.2",
+    "ansis": "3.3.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "cli-color": "2.0.4",
     "cors": "2.8.5",
     "express": "4.21.1",
     "fast-json-stringify": "6.0.0",
