build: use strict null checks part 1

--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -16,7 +16,9 @@
     "sourceMap": false,
     "allowJs": false,
     "strict": true,
-    "strictNullChecks": false,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
     "types": ["node"]
   }
 }
