--- a/integration/nest-application/app-locals/tsconfig.json
+++ b/integration/nest-application/app-locals/tsconfig.json
@@ -11,6 +11,7 @@
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist",
+    "strictNullChecks": true,
     "paths": {
       "@nestjs/common": ["../../../packages/common"],
       "@nestjs/common/*": ["../../../packages/common/*"],
