--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "test:docker:down": "docker-compose -f integration/docker-compose.yml down",
     "lint": "concurrently 'npm run lint:packages' 'npm run lint:integration' 'npm run lint:spec'",
     "lint:fix": "concurrently 'npm run lint:packages -- --fix' 'npm run lint:integration -- --fix' 'npm run lint:spec -- --fix'",
-    "lint:integration": "eslint 'integration/*/{,!(node_modules)/**/}/*.ts'",
-    "lint:packages": "eslint 'packages/**/**.ts' --ignore-pattern 'packages/**/*.spec.ts'",
-    "lint:spec": "eslint 'packages/**/**.spec.ts'",
+    "lint:integration": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'integration/*/{,!(node_modules)/**/}/*.ts'",
+    "lint:packages": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'packages/**/**.ts' --ignore-pattern 'packages/**/*.spec.ts'",
+    "lint:spec": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'packages/**/**.spec.ts'",
     "lint:ci": "npm run lint:packages && npm run lint:integration && npm run lint:spec",
     "prerelease": "gulp copy-misc",
     "publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --access public --exact -m \"chore(@nestjs) publish %s release\"",
