ci: run spec and packages lint in parallel

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint:integration": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'integration/**/*.ts'",
     "lint:packages": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'packages/**/**.ts' --ignore-pattern 'packages/**/*.spec.ts'",
     "lint:spec": "node --max-old-space-size=4096 ./node_modules/.bin/eslint 'packages/**/**.spec.ts'",
-    "lint:ci": "npm run lint:packages && npm run lint:integration && npm run lint:spec",
+    "lint:ci": "concurrently 'npm run lint:packages' 'npm run lint:spec'",
     "prerelease": "gulp copy-misc",
     "publish": "npm run prerelease && npm run build:prod && ./node_modules/.bin/lerna publish --force-publish --access public --exact -m \"chore(@nestjs) publish %s release\"",
     "prepublishOnly": "npm run changelog | pbcopy",
