chore: mqtt updates, integration test improvements

--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -27,6 +27,7 @@ services:
   mysql:
     image: mysql:8.3.0
     environment:
+      MYSQL_ROOT_HOST: '%'
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test
     ports:
